# mem-inspect

./: .gitignore  CMakeLists.txt  LICENSE  README.md  annotated.html  annotated_dup.js  build.sh  classes.html  classmeminspect_1_1MemoryTracker-members.html  classmeminspect_1_1MemoryTracker.html  classmeminspect_1_1MemoryTracker.js  conanfile.txt  dir_3e8b5b7dd3ec580f9c4cf1581c3c5728.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  dir_e68e8157741866f444e17edd764ebbae.html  functions.html  functions_func.html  index.html  index.js  memory__tracker_8h_source.html  navtreedata.js  navtreeindex0.js  version.json
.github/workflows/: main.yml
cmake/: conan.cmake  configure_compiler.cmake  configure_version.cmake  doxygen.cmake
doc/: doxyfile.in  header.html  readme.md
docker/: Dockerfile.clang16  Dockerfile.gcc13  bashrc  update-alternatives-clang.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  functions_0.js  functions_1.js  pages_1.js  searchdata.js
src/: CMakeLists.txt
src/include/meminspect/: memory_hook.h  memory_inpector.h  memory_inspector.h  memory_tracker.h  types.h
src/test/: CMakeLists.txt  main.cxx  test_hash_map.cxx  test_hooks.cxx  test_list.cxx  test_mutex.cxx  test_sorted_list.cxx
